🏠 The Mall — warm, safe, family-friendly
The soul change. Not a rebrand — a homecoming.

- Welcome to serlf. Come in, look around.
- No sign-up needed to browse
- Safe for families 🏠
- No corporate jargon, no dark patterns
- Each store $1/mo to join
- NEW: safety.html — Our Safety Promise
- Removed all personal details, corporate references
- Mall vibes: warm, friendly, Canadian 🇨🇦

Built by a small team in Canada. With love.
Safe enough for our own kids. ⚓🧭

--- a/club/index.html
+++ b/club/index.html
@@ -2,54 +2,51 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Community · Admiral Fleet Control</title>
-<meta name="description" content="SERLF community. Join the fleet. Alumni, mentors, crew. Powered by the Admiral Pair.">
+<title>serlf — The Food Court · Pull Up a Chair</title>
+<meta name="description" content="serlf community hangout. Where everyone comes to chat, share, and hang out. Pull up a chair.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Community</span></div>
+<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">The Food Court</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a><a href="https://serlf.club" class="active">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
+<a href="/">Home</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 The Community</p>
-<h1>Join the fleet.<br>The Admiral Pair welcomes you.</h1>
-<p class="tagline">Alumni network, cohort spaces, mentorship. Where graduates become captains and captains become admirals.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🍕 The Food Court</p>
+<h1>Pull up a chair.</h1>
+<p class="tagline">This is where everyone hangs out. Share stories, ask questions, meet friends. Grab a slice and sit down.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Start Building — $1/product</a>
-<a href="https://serlf.ca/crew.html" class="btn btn-secondary">Meet the Crew</a>
+<a href="/" class="btn btn-gold">🏠 Back to the Mall</a>
+<a href="/crew.html" class="btn btn-secondary">👋 Meet the Crew</a>
 </div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">Fleet Community</h2>
+<h2 class="section-title">🪑 What's Happening</h2>
 <div class="grid grid-3">
-<div class="card"><div class="icon">🎓</div><h3>SERLF Academy Alumni</h3><p>Graduates who've launched their own fleets. Mentoring the next wave.</p></div>
-<div class="card"><div class="icon">⚓🧭</div><h3>Admiral Pair Office Hours</h3><p>Direct time with the dual-master fleet. Architecture reviews, pattern discovery.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>Pattern Submissions</h3><p>Discover a Novel Pattern? Submit it. The community rates. The fleet evolves.</p></div>
+<div class="card"><div class="icon">🎓</div><h3>Learning Circle</h3><p>People who've learned cool stuff sharing it with newcomers. Like study groups, but more fun.</p></div>
+<div class="card"><div class="icon">⚓🧭</div><h3>Open Hours</h3><p>Drop in, ask questions, get help. No appointments needed. Like office hours, but friendlier.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Idea Board</h3><p>Discovered something clever? Post it on the board! The community votes on the best ideas.</p></div>
 </div>
 </div>
 </section>
 
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo per product</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/product</a>
+<p style="color:var(--warm-gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Everyone's welcome. Grab a chair and say hi. 👋</p>
+<a href="/" class="btn btn-gold">Back to the Mall</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
-<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
+<a href="/">Home</a><a href="/crew.html">Crew</a><a href="/vision.html">Our Story</a>
 </div>
-<div class="footer-bottom">⚓🧭 SERLF · Community · by EOSE × E&Y · 🇨🇦 Canada<br><em>"Become the enterprise."</em></div>
+<div class="footer-bottom">⚓🧭 serlf · The Food Court · 🇨🇦 Canada<br><em>"Pull up a chair."</em></div>
 </div></footer>
 </body>
 </html>
