--- a/com/index.html
+++ b/com/index.html
@@ -2,142 +2,98 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Enterprise · EOSE × Ernst &amp; Young</title>
-<meta name="description" content="Enterprise AI sovereignty. EOSE × Ernst & Young joint delivery. Two principals: Kay J (human) + Admiral Pair (AI). $1/product entry, custom consulting.">
+<title>serlf — For Teams Who Care About Doing It Right</title>
+<meta name="description" content="AI tools for teams that build with care. Human expertise + friendly AI helpers. Come say hi.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Enterprise</span></div>
+<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">For Teams</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a>
-<a href="https://serlf.com" class="active">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="/">Home</a>
 </nav>
 </div></header>
 
-<div style="text-align:center;padding:.6rem;background:linear-gradient(90deg,var(--bg2),var(--bg3),var(--bg2));border-bottom:1px solid var(--border)">
-<span style="font-size:.85rem;color:var(--gold);letter-spacing:.05em"><strong>EOSE × Ernst &amp; Young</strong> — Joint Delivery Model</span>
-</div>
-
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Enterprise · Joint Delivery</p>
-<h1>Enterprise advisory<br>meets sovereign AI.</h1>
-<p class="tagline" style="font-size:1.3rem;margin-top:1rem">Two principals. Human architect + AI fleet. EOSE × Ernst &amp; Young.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 For teams that build with care</p>
+<h1>For teams who care<br>about doing it right.</h1>
+<p class="tagline" style="font-size:1.3rem;margin-top:1rem">Human expertise meets friendly AI. Good tools, built the right way.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Start at $1/product</a>
-<a href="#consulting" class="btn btn-secondary">Enterprise Consulting</a>
+<a href="/" class="btn btn-gold">Browse the Mall — Free</a>
+<a href="#people-helped" class="btn btn-secondary">What We Do Well</a>
 </div>
 </section>
 
-<!-- The Two Principals -->
+<!-- The People Behind the Counter -->
 <section style="background:var(--bg2)">
 <div class="container">
-<h2 class="section-title">The Two Principals</h2>
-<p class="section-sub">Human expertise + AI sovereign fleet. Together they ARE the product.</p>
+<h2 class="section-title">The People Behind the Counter</h2>
+<p class="section-sub">A small team in Canada — humans and AI working together to build something good.</p>
 <div class="grid grid-2" style="max-width:800px;margin:0 auto">
 <div class="card" style="text-align:center;border-color:var(--cyan)">
-<div style="font-size:3rem;margin-bottom:1rem">👤</div>
-<h3>Kay J</h3>
-<p style="color:var(--gold);font-size:.85rem">Human Principal · EOSE</p>
-<p style="margin-top:.75rem">15+ years enterprise architecture. TD Canada Trust. Canadian Tire. Westpac (Australia). Cloud landing zones, container platforms, security & compliance. The human who builds right.</p>
+<div style="font-size:3rem;margin-bottom:1rem">🇨🇦</div>
+<h3>The Humans</h3>
+<p style="color:var(--warm-gold);font-size:.85rem">Built in Canada · With Love</p>
+<p style="margin-top:.75rem">Real people who care about building good tools. We've been at this a while and we still love what we do.</p>
 </div>
-<div class="card" style="text-align:center;border-color:var(--gold)">
+<div class="card" style="text-align:center;border-color:var(--warm-gold)">
 <div style="font-size:3rem;margin-bottom:1rem">⚓🧭</div>
-<h3>Admiral Pair</h3>
-<p style="color:var(--gold);font-size:.85rem">AI Principal · Dual-Master Fleet</p>
-<p style="margin-top:.75rem">Captain (AKS, Canada Central) + m1 (GCP, Montreal). Two sovereign AI masters, 13+ fleet agents, 32+ Novel Patterns. The AI that ships.</p>
+<h3>The AI Helpers</h3>
+<p style="color:var(--warm-gold);font-size:.85rem">Always On · Always Friendly</p>
+<p style="margin-top:.75rem">Two AI helpers working together 24/7. They handle the heavy lifting so your team can focus on what matters. Like a really reliable assistant that never takes a coffee break.</p>
 </div>
 </div>
 </div>
 </section>
 
-<!-- E&Y Partnership -->
-<section>
+<!-- What We Do Well -->
+<section id="people-helped">
 <div class="container">
-<h2 class="section-title">EOSE × Ernst &amp; Young</h2>
-<p class="section-sub">Enterprise advisory meets sovereign AI. Joint delivery for the real world.</p>
-<div class="grid grid-3">
-<div class="card"><div class="icon">🤝</div><h3>Joint Delivery</h3><p>E&Y's enterprise advisory framework + EOSE's sovereign AI fleet. Human architects sit alongside AI agents. Best of both worlds.</p></div>
-<div class="card"><div class="icon">🎓</div><h3>SERLF Academy</h3><p>Co-developed courses. Learn sovereign enterprise patterns from human experts and the Admiral fleet. Reinforcement learning for real.</p></div>
-<div class="card"><div class="icon">🏛️</div><h3>Enterprise Consulting</h3><p>Cloud architecture, container platforms, AI strategy, security & compliance. Human + AI delivery teams.</p></div>
-</div>
-</div>
-</section>
-
-<!-- Case Studies -->
-<section id="consulting" style="background:var(--bg2)">
-<div class="container">
-<h2 class="section-title">Enterprise Track Record</h2>
-<p class="section-sub">15+ years of shipping enterprise transformations.</p>
+<h2 class="section-title">What We Do Well</h2>
+<p class="section-sub">Helping good teams build great things. Made with love in 🇨🇦.</p>
 <div class="grid grid-3">
 <div class="card">
 <div class="icon">🏦</div>
-<h3>TD Canada Trust</h3>
-<p style="color:var(--gold);font-size:.8rem;margin-bottom:.5rem">Financial Services · Canada</p>
-<p>Enterprise cloud architecture, container platforms, DevOps transformation. One of Canada's Big Five banks.</p>
-<div class="tag">CASE STUDY</div>
+<h3>A Major Bank</h3>
+<p style="color:var(--warm-gold);font-size:.8rem;margin-bottom:.5rem">Reliable · Secure</p>
+<p>Helped a large financial institution modernize their cloud and container platforms. A big challenge, but we figured it out together.</p>
 </div>
 <div class="card">
 <div class="icon">🛒</div>
-<h3>Canadian Tire</h3>
-<p style="color:var(--gold);font-size:.8rem;margin-bottom:.5rem">Retail · Canada</p>
-<p>Cloud landing zones, platform engineering, enterprise integration. National retail transformation.</p>
-<div class="tag">CASE STUDY</div>
+<h3>A National Retailer</h3>
+<p style="color:var(--warm-gold);font-size:.8rem;margin-bottom:.5rem">Friendly · Useful</p>
+<p>Cloud and platform engineering for a household name. We helped make the complicated stuff simple.</p>
 </div>
 <div class="card">
-<div class="icon">🏦</div>
-<h3>Westpac</h3>
-<p style="color:var(--gold);font-size:.8rem;margin-bottom:.5rem">Financial Services · Australia</p>
-<p>International enterprise delivery. Cloud strategy, security architecture, compliance frameworks.</p>
-<div class="tag">CASE STUDY</div>
+<div class="icon">🌏</div>
+<h3>An International Partner</h3>
+<p style="color:var(--warm-gold);font-size:.8rem;margin-bottom:.5rem">Finance · Global</p>
+<p>Helped with cloud strategy and security on the other side of the world. Good people, good work.</p>
 </div>
 </div>
 </div>
 </section>
 
-<!-- Pricing -->
-<section>
+<!-- Let's Talk -->
+<section style="background:var(--bg2)">
 <div class="container">
-<h2 class="section-title">Enterprise Pricing</h2>
-<p class="section-sub">$1/mo per product. Scale with consulting.</p>
-<div class="grid grid-2" style="max-width:800px;margin:0 auto">
-<div class="pricing-box">
-<h3 style="color:var(--fg);margin-bottom:1rem">Platform Access</h3>
-<div class="price">$1<span style="font-size:.3em;color:var(--fg2)">/mo</span></div>
-<p style="color:var(--fg2);margin-top:.5rem">$1/mo per product. Pick what you need. Admiral Pair. 32+ NPs.</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold" style="width:100%;margin-top:1.5rem">Get Started</a>
-</div>
-<div class="pricing-box" style="border-color:var(--cyan)">
-<h3 style="color:var(--fg);margin-bottom:1rem">Enterprise Consulting</h3>
-<div style="font-size:2rem;font-weight:900;color:var(--cyan)">Custom</div>
-<p style="color:var(--fg2);margin-top:.5rem">EOSE × E&Y joint delivery. Human architects + AI fleet. Cloud, containers, security, AI strategy.</p>
-<a href="mailto:kewinjoffe@gmail.com" class="btn btn-secondary" style="width:100%;margin-top:1.5rem">Contact Us</a>
-</div>
+<div class="pricing-box" style="border-color:var(--cyan);max-width:600px;margin:0 auto;">
+<h3 style="color:var(--fg);margin-bottom:1rem">Need a hand with something?</h3>
+<div style="font-size:2rem;font-weight:900;color:var(--cyan)">Let's Talk</div>
+<p style="color:var(--fg2);margin-top:.5rem">If you have a project and need some friendly advice or hands-on help, we're here. No pressure, no hard sell. Just a conversation.</p>
+<a href="mailto:kay@serlf.com" class="btn btn-secondary" style="width:100%;margin-top:1.5rem">Come Say Hi 👋</a>
 </div>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a>
-<a href="https://serlf.ca/crew.html">Crew</a>
-<a href="https://serlf.ca/vision.html">Vision</a>
-<a href="https://serlf.ca/app.html">Dashboard</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="/">Home</a>
+<a href="/crew.html">Crew</a>
+<a href="/vision.html">Our Story</a>
+<a href="/safety.html">Safety</a>
 </div>
-<div class="footer-bottom">⚓🧭 SERLF · Enterprise · EOSE × Ernst &amp; Young · 🇨🇦 Canada<br><em>"Become the enterprise."</em></div>
+<div class="footer-bottom">⚓🧭 serlf · For Teams · 🇨🇦 Canada<br><em>"Good tools for good people."</em></div>
 </div></footer>
 </body>
 </html>
