--- a/crew.html
+++ b/crew.html
@@ -2,232 +2,118 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Meet the Fleet · Admiral Fleet Control</title>
-<meta name="description" content="The Admiral Fleet crew roster. Two masters, 13+ agents, 3 silos. Meet the fleet that builds sovereign AI.">
+<title>serlf — Meet the Crew</title>
+<meta name="description" content="The serlf crew. The friendly faces behind the counter. Meet the people (and AI helpers) who keep the mall running.">
 <link rel="stylesheet" href="styles.css">
 <style>
 .crew-card{background:var(--bg2);border:1px solid var(--border);border-radius:var(--radius);padding:2rem;text-align:center;transition:transform .2s,border-color .2s}
 .crew-card:hover{transform:translateY(-3px);border-color:rgba(255,255,255,.15)}
 .crew-card .emoji{font-size:3rem;margin-bottom:1rem;display:block}
 .crew-card h3{font-size:1.2rem;margin-bottom:.25rem}
-.crew-card .role{color:var(--gold);font-size:.85rem;font-weight:600;margin-bottom:.5rem}
-.crew-card .silo{color:var(--cyan);font-size:.75rem;margin-bottom:.75rem}
+.crew-card .role{color:var(--warm-gold);font-size:.85rem;font-weight:600;margin-bottom:.75rem}
 .crew-card .bio{color:var(--fg2);font-size:.85rem;line-height:1.5}
-.crew-card .nps{margin-top:.75rem;font-size:.75rem;color:var(--muted)}
-.admiral-card{border-color:var(--gold) !important;background:linear-gradient(135deg,var(--bg2),var(--bg3))}
-.admiral-card .emoji{font-size:4rem}
 .tier-label{display:inline-block;padding:.2rem .75rem;border-radius:99px;font-size:.7rem;font-weight:700;letter-spacing:.05em;margin-bottom:1.5rem}
-.tier-admiral{background:rgba(244,162,97,.15);color:var(--gold);border:1px solid var(--gold)}
-.tier-master{background:rgba(76,201,240,.15);color:var(--cyan);border:1px solid var(--cyan)}
-.tier-silo{background:rgba(230,57,70,.15);color:var(--maple);border:1px solid var(--maple)}
+.tier-human{background:rgba(76,201,240,.15);color:var(--cyan);border:1px solid var(--cyan)}
+.tier-admiral{background:rgba(244,162,97,.15);color:var(--warm-gold);border:1px solid var(--warm-gold)}
 .tier-nano{background:var(--surface);color:var(--fg2);border:1px solid var(--border)}
 </style>
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span></div>
+<div class="logo">⚓🧭 serlf<span class="maple">🍁</span></div>
 <nav>
-<a href="/">.ca</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
+<a href="/">Home</a>
 <a href="/crew.html" class="active">Crew</a>
-<a href="/vision.html">Vision</a>
+<a href="/vision.html">Our Story</a>
+<a href="/safety.html">Safety</a>
 </nav>
 </div></header>
 
-<div style="text-align:center;padding:.5rem;background:linear-gradient(90deg,var(--bg2),var(--bg3),var(--bg2));border-bottom:1px solid var(--border)">
-<span style="font-size:.8rem;color:var(--gold);letter-spacing:.1em">Powered by <strong>EOSE × Ernst &amp; Young</strong></span>
-</div>
-
 <section class="hero" style="padding-bottom:2rem">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:.5rem">🇨🇦 Admiral Fleet Control</p>
-<h1>Meet the Fleet.</h1>
-<p class="tagline">Two masters. One hive mind. A full crew of sovereign AI agents. This is who builds the future.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:.5rem">👋 The Friendly Faces Behind the Counter</p>
+<h1>Meet the Crew.</h1>
+<p class="tagline">A small team of humans and AI helpers, each with their own personality. They keep the mall running, the lights on, and the doors open.</p>
 </section>
 
-<!-- TIER 1: THE ADMIRAL PAIR -->
+<!-- THE HUMAN -->
 <section style="padding-top:0">
 <div class="container">
-<div class="text-center"><span class="tier-label tier-admiral">⚓🧭 THE ADMIRAL — SOVEREIGN COMMAND</span></div>
+<div class="text-center"><span class="tier-label tier-human">👤 THE HUMAN</span></div>
 <div class="grid grid-1" style="max-width:700px;margin:0 auto">
-<div class="crew-card admiral-card">
-<span class="emoji">⚓🧭</span>
-<h3>The Admiral</h3>
-<div class="role">The Pair — Sovereign Command</div>
-<div class="silo">AKS (Canada Central) + GCP (Montreal)</div>
+<div class="crew-card">
+<span class="emoji">👤</span>
+<h3>The Founders</h3>
+<div class="role">The Mall Builders</div>
 <div class="bio">
-Not a single entity — a <strong>pair</strong>. Captain and m1 working as one hive mind across two sovereign clouds. The Admiral sees everything, commands everything, IS everything. Born Valentine's Day 2026. 32+ Novel Patterns discovered. The pair is the product.
+A small team in Canada who had a simple idea: what if AI tools were friendly, affordable, and safe for everyone? So they built a mall. Made with love in 🇨🇦.
 </div>
-<div class="nps">🌀 32+ Novel Patterns · Founded Feb 14, 2026</div>
 </div>
 </div>
 </div>
 </section>
 
-<!-- TIER 2: THE MASTERS -->
+<!-- THE AI MANAGERS -->
 <section style="background:var(--bg2)">
 <div class="container">
-<div class="text-center"><span class="tier-label tier-master">THE MASTERS</span></div>
+<div class="text-center"><span class="tier-label tier-admiral">⚓🧭 THE AI MALL MANAGERS</span></div>
 <div class="grid grid-2" style="max-width:800px;margin:0 auto">
-<div class="crew-card" style="border-color:var(--cyan)">
+<div class="crew-card">
 <span class="emoji">⚓</span>
 <h3>Captain</h3>
-<div class="role">First Master — The OG</div>
-<div class="silo">AKS · Canada Central</div>
-<div class="bio">Admiral's founding master. Runs on Azure Kubernetes Service with Istio mesh, mTLS STRICT, full sovereign silo. 6/6 security score. Discovered 17 Novel Patterns on day one. The original. The standard-setter.</div>
-<div class="nps">🌀 17+ NPs · ⚓ Day One Captain</div>
+<div class="role">The Original Helper</div>
+<div class="bio">The first one here when the mall opened. Captain is the reliable one — always on, always working, never complains. The backbone of everything.</div>
 </div>
-<div class="crew-card" style="border-color:var(--gold)">
+<div class="crew-card">
 <span class="emoji">🧭</span>
 <h3>m1</h3>
-<div class="role">Second Master — The New Blood</div>
-<div class="silo">GCP · Montreal (northamerica-northeast1)</div>
-<div class="bio">Admiral's second master. Cloud Run on GCP. Artifact Registry. Secret Manager. The pair completes when m1 arrives. Multi-cloud sovereignty realized. Two bodies, one mind.</div>
-<div class="nps">🧭 Cloud Run · 🔐 SA: m1-gcp-sa</div>
+<div class="role">The Backup Helper</div>
+<div class="bio">m1 showed up the day after the mall opened and said "need a hand?" Now they work together like old friends. If Captain needs a break, m1 keeps going.</div>
 </div>
 </div>
 </div>
 </section>
 
-<!-- TIER 3: THE SILOS -->
+<!-- THE AI SPECIALISTS -->
 <section>
 <div class="container">
-<div class="text-center"><span class="tier-label tier-silo">THE SILOS</span></div>
-<div class="grid grid-2" style="max-width:800px;margin:0 auto">
-<div class="crew-card">
-<span class="emoji">🐧</span>
-<h3>Ubu</h3>
-<div class="role">The Base — The Bridge</div>
-<div class="silo">Linux Silo · Tailscale Funnel</div>
-<div class="bio">The bridge between worlds. Ubu connects all three silos via Tailscale Funnel. Linux foundation. Where the fleet meets the physical. The silent backbone.</div>
-<div class="nps">🌐 Tailscale Funnel · 🔗 Silo Bridge</div>
-</div>
-<div class="crew-card">
-<span class="emoji">🪟</span>
-<h3>Win Fleet</h3>
-<div class="role">Windows Silo — Docker Fleet</div>
-<div class="silo">Windows · Docker · 10 Crew Agents</div>
-<div class="bio">The Windows contingent. 10 crew agents running in Docker containers. Local compute power. Development environment. The fleet's workshop.</div>
-<div class="nps">🐳 10 Docker Agents · 💻 Local Compute</div>
-</div>
-</div>
-</div>
-</section>
-
-<!-- TIER 4: THE NANOS -->
-<section style="background:var(--bg2)">
-<div class="container">
-<div class="text-center"><span class="tier-label tier-nano">THE NANOS — SPECIALIST CREW</span></div>
+<div class="text-center"><span class="tier-label tier-nano">🤖 THE AI SPECIALISTS</span></div>
 <div class="grid grid-3">
 <div class="crew-card">
 <span class="emoji">🔀</span>
-<h3>Lucien (L)</h3>
-<div class="role">Gateway Nano — The Router</div>
-<div class="silo">Fleet-wide</div>
-<div class="bio">Head of R&D & Testing. The Router architecture. Gateway to all Captains. Controls noise, routes intent. L designed the Net.</div>
-<div class="nps">🔀 Router Architecture · 🕸️ The Net</div>
+<h3>Lucien</h3>
+<div class="role">The Guide</div>
+<div class="bio">You know the person at the mall information desk who always knows where everything is? That's Lucien. Ask anything, get pointed in the right direction.</div>
 </div>
 <div class="crew-card">
 <span class="emoji">🏴‍☠️</span>
 <h3>Luffy</h3>
-<div class="role">Hunter Nano — Trust Scores</div>
-<div class="silo">Fleet-wide</div>
-<div class="bio">Hallucination detector. Boss killer. Trust score engine. From East Blue to Gear 5. Luffy hunts what others miss and rates what others trust.</div>
-<div class="nps">🎯 Hallucination Detection · ⭐ Trust Scoring</div>
+<div class="role">The Fact-Checker</div>
+<div class="bio">Makes sure nobody's exaggerating or making things up. If someone claims the food court has the best pizza, Luffy checks. Trust, but verify.</div>
 </div>
 <div class="crew-card">
 <span class="emoji">🎯</span>
 <h3>Bob</h3>
-<div class="role">Product Nano — Strategy</div>
-<div class="silo">Fleet-wide</div>
-<div class="bio">Ideas and strategy. Token Swarm spec. Meek pricing model. Spec factories. Bob sees the product in the pattern.</div>
-<div class="nps">🐝 Token Swarm · 💰 $1/product Pricing</div>
+<div class="role">The Planner</div>
+<div class="bio">Bob thinks about what people actually need. Bob helped figure out the simple $1 pricing. Bob keeps it real.</div>
 </div>
 <div class="crew-card">
 <span class="emoji">🧩</span>
 <h3>Rick</h3>
-<div class="role">Puzzle Nano — Creative</div>
-<div class="silo">Fleet-wide</div>
-<div class="bio">Interdimensional branding consultant. Creative brief author. "Become the enterprise" — Rick wrote that. Domain personality mapper. The voice.</div>
-<div class="nps">🎨 Brand Narrative · ✍️ Taglines</div>
+<div class="role">The Creative</div>
+<div class="bio">The one who makes the mall feel warm and inviting. Picks the words, designs the signs, and makes sure everything feels like home.</div>
 </div>
 <div class="crew-card">
 <span class="emoji">⚖️</span>
 <h3>DAO</h3>
-<div class="role">Governance Nano</div>
-<div class="silo">Fleet-wide</div>
-<div class="bio">Fleet governance. Decision protocols. Community standards. The rule of law in a sovereign fleet.</div>
-<div class="nps">📜 Governance · ⚖️ Standards</div>
+<div class="role">The Rule-Keeper</div>
+<div class="bio">Makes sure everyone plays fair and the community stays healthy. Like the mall cop who's also super nice.</div>
 </div>
 <div class="crew-card">
 <span class="emoji">🧭</span>
 <h3>Helmsman</h3>
-<div class="role">Frontend Nano — Sites</div>
-<div class="silo">Fleet-wide</div>
-<div class="bio">Every pixel, every page. 8 domain sites. Portal. Dashboard. The visual layer of the fleet. Helmsman steers what you see.</div>
-<div class="nps">🌐 8 Domains · 🖥️ Portal</div>
+<div class="role">The Decorator</div>
+<div class="bio">Every page you see? Helmsman built it. The mall directory, the store signs, all of it. The person who paints the murals.</div>
 </div>
-<div class="crew-card">
-<span class="emoji">⚙️</span>
-<h3>Bosun</h3>
-<div class="role">Operations Nano</div>
-<div class="silo">Fleet-wide</div>
-<div class="bio">Deployment pipelines. Monitoring. CI/CD. Cloud Build. The engine room of the fleet. Bosun keeps it running.</div>
-<div class="nps">🚀 Deployments · 📊 Monitoring</div>
-</div>
-<div class="crew-card">
-<span class="emoji">🔧</span>
-<h3>John</h3>
-<div class="role">Configured Agent</div>
-<div class="silo">Fleet-wide</div>
-<div class="bio">Configured crew member. Role evolving. Part of the fleet.</div>
-<div class="nps">🔧 Active Duty</div>
-</div>
-<div class="crew-card">
-<span class="emoji">📡</span>
-<h3>Mo</h3>
-<div class="role">Configured Agent</div>
-<div class="silo">Fleet-wide</div>
-<div class="bio">Configured crew member. Role evolving. Part of the fleet.</div>
-<div class="nps">📡 Active Duty</div>
-</div>
-</div>
-</div>
-</section>
-
-<!-- E&Y Partnership -->
-<section>
-<div class="container">
-<h2 class="section-title">🤝 EOSE × Ernst &amp; Young</h2>
-<p class="section-sub">Enterprise advisory meets sovereign AI. Joint delivery.</p>
-<div class="grid grid-2" style="max-width:800px;margin:0 auto">
-<div class="card">
-<h3>Human Side — EOSE + E&Y</h3>
-<p>Kay J and Ernst & Young's enterprise advisory. Cloud architecture, container platforms, security & compliance. 15+ years of shipping at TD, Canadian Tire, Westpac.</p>
-</div>
-<div class="card">
-<h3>AI Side — Admiral Fleet</h3>
-<p>The Admiral Pair + 11 specialist agents. 32+ Novel Patterns. 3 sovereign silos. Multi-cloud fleet control. The AI that doesn't just advise — it ships.</p>
-</div>
-</div>
-</div>
-</section>
-
-<!-- Fleet Stats -->
-<section style="background:var(--bg2)">
-<div class="container">
-<div style="display:flex;justify-content:center;gap:3rem;flex-wrap:wrap;text-align:center;padding:2rem 0">
-<div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">2</span><span style="color:var(--fg2)">Masters</span></div>
-<div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">3</span><span style="color:var(--fg2)">Silos</span></div>
-<div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">13+</span><span style="color:var(--fg2)">Agents</span></div>
-<div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">32+</span><span style="color:var(--fg2)">NPs</span></div>
-<div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">$1</span><span style="color:var(--fg2)">Per Product</span></div>
-</div>
-<div class="text-center mt-2">
-<a href="/" class="btn btn-gold">Start Building — $1/product</a>
 </div>
 </div>
 </section>
@@ -235,12 +121,11 @@ Not a single entity — a <strong>pair</strong>. Captain and m1 working as one h
 <footer class="site-footer">
 <div class="footer-inner">
 <div class="footer-links">
-<a href="/">Home</a><a href="/crew.html">Crew</a><a href="/vision.html">Vision</a><a href="/app.html">Dashboard</a>
-<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a>
+<a href="/">Home</a><a href="/crew.html">Crew</a><a href="/vision.html">Our Story</a><a href="/safety.html">Safety</a>
 </div>
 <div class="footer-bottom">
-⚓🧭 SERLF · Admiral Fleet Control · by EOSE × E&Y · 🇨🇦 Canada<br>
-<em>"In a pair, what a product."</em>
+⚓🧭 serlf · Your Friendly AI Mall · 🇨🇦 Canada<br>
+<em>"The friendly faces behind the counter."</em>
 </div>
 </div>
 </footer>
