--- a/dashboard.html
+++ b/dashboard.html
@@ -123,7 +123,7 @@ td{padding:.75rem;border-bottom:1px solid rgba(255,255,255,.03)}
 <div class="stat"><div class="value">$0</div><div class="label">AI Spend (BYOK)</div></div>
 <div class="stat"><div class="value">$0</div><div class="label">Revenue (MRR)</div></div>
 </div>
-<p style="color:var(--fg2)">GitHub Pages = free hosting. BYOK = $0 AI costs. The meek business model. 🧅</p>
+<p style="color:var(--fg2)">GitHub Pages = free hosting. BYOK = $0 AI costs. The friendly business model. 😊</p>
 </div>
 
 <div class="tab-content" id="users">
