--- a/info/index.html
+++ b/info/index.html
@@ -2,57 +2,54 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Knowledge &amp; Documentation · Admiral Fleet Control</title>
-<meta name="description" content="SERLF knowledge base. 32+ Novel Patterns, fleet architecture, the Admiral Pair explained.">
+<title>serlf — The Library · Grab a Seat, Have a Read</title>
+<meta name="description" content="serlf knowledge base. 32+ patterns, guides, and friendly explanations. The cozy library of the mall.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Knowledge</span></div>
+<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">The Library</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a>
-<a href="https://serlf.info" class="active">.info</a><a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
+<a href="/">Home</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Knowledge &amp; Documentation</p>
-<h1>The Library.<br>32+ Novel Patterns and counting.</h1>
-<p class="tagline">Research, case studies, architecture docs. Everything the Admiral Pair has discovered, documented.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">📖 The Library</p>
+<h1>Grab a seat,<br>have a read.</h1>
+<p class="tagline">Everything we've learned, written down in plain language. No jargon. No gatekeeping. Just good, honest documentation.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Start Building — $1/product</a>
-<a href="https://serlf.ca/vision.html" class="btn btn-secondary">Read the Vision</a>
+<a href="/" class="btn btn-gold">🏠 Back to the Mall</a>
+<a href="/vision.html" class="btn btn-secondary">📖 Our Story</a>
 </div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">Featured Knowledge</h2>
+<h2 class="section-title">📚 What's on the Shelves</h2>
 <div class="grid grid-3">
-<div class="card"><div class="icon">⚓🧭</div><h3>The Admiral Pair</h3><p>Two masters, one hive mind. Captain (AKS) + m1 (GCP). Architecture deep dive.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>32+ Novel Patterns</h3><p>Every pattern discovered, rated, and documented. From Silo Audit to Self-Healing Fleet.</p></div>
-<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>Multi-tier AI token routing. OAuth intelligence. 87% cost savings explained.</p></div>
-<div class="card"><div class="icon">🔐</div><h3>Day 0 Security</h3><p>MI-KV pattern. mTLS mesh. 6/6 silo score methodology.</p></div>
-<div class="card"><div class="icon">🤝</div><h3>EOSE × E&Y Model</h3><p>How human enterprise advisory meets sovereign AI fleet delivery.</p></div>
-<div class="card"><div class="icon">📖</div><h3>The Meek Way</h3><p>Enterprise patterns for everyone. $1 per product. The philosophy behind the price.</p></div>
+<div class="card"><div class="icon">⚓🧭</div><h3>How the Helpers Work</h3><p>A simple explanation of how our two AI helpers, Captain and m1, work together.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>32+ Clever Patterns</h3><p>Every trick we figured out, written down so anyone can learn from them.</p></div>
+<div class="card"><div class="icon">🐝</div><h3>Saving Money on AI</h3><p>How we cut AI costs by 87%. The math, the method, no secrets.</p></div>
+<div class="card"><div class="icon">🔐</div><h3>Keeping Things Safe</h3><p>How we protect your stuff from day one. Written so anyone can understand it.</p></div>
+<div class="card"><div class="icon">🤝</div><h3>How We Work Together</h3><p>Human experts + AI helpers. How the partnership actually works in practice.</p></div>
+<div class="card"><div class="icon">💡</div><h3>The Friendly Way</h3><p>Good tools for everyone at prices everyone can afford. The philosophy behind it all.</p></div>
 </div>
 </div>
 </section>
 
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo per product</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/product</a>
+<p style="color:var(--warm-gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the serlf mall — browse everything for free</p>
+<a href="/" class="btn btn-gold">Back to the Mall</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
-<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
+<a href="/">Home</a><a href="/crew.html">Crew</a><a href="/vision.html">Our Story</a>
 </div>
-<div class="footer-bottom">⚓🧭 SERLF · Knowledge · by EOSE × E&Y · 🇨🇦 Canada<br><em>"In a pair, what a product."</em></div>
+<div class="footer-bottom">⚓🧭 serlf · The Library · 🇨🇦 Canada<br><em>"Grab a seat, have a read."</em></div>
 </div></footer>
 </body>
 </html>
