--- a/net/index.html
+++ b/net/index.html
@@ -2,62 +2,53 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Developer Infrastructure · Admiral Fleet Control</title>
-<meta name="description" content="SERLF developer infrastructure. APIs, sandbox, integrations. Powered by the Admiral Pair.">
+<title>serlf — The Workshop · Come Build With Us</title>
+<meta name="description" content="serlf developer workshop. APIs, tools, and everything you need to build. Friendly and approachable.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Infrastructure</span></div>
+<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">The Workshop</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net" class="active">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="/">Home</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Developer Infrastructure</p>
-<h1>The Network.<br>Admiral Pair at the core.</h1>
-<p class="tagline">API endpoints, developer portal, integrations. Two masters powering the backbone. 3 silos: AKS + GCP + Win.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🔧 The Workshop</p>
+<h1>Come build with us.</h1>
+<p class="tagline">This is where the tools live. APIs, docs, and everything a builder needs. Grab a workbench and let's make something cool.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Start Building — $1/product</a>
-<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
+<a href="/" class="btn btn-gold">🏠 Back to the Mall</a>
+<a href="/info/" class="btn btn-secondary">📖 Read the Manuals</a>
 </div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">3 Sovereign Silos</h2>
-<p class="section-sub">The Admiral Pair orchestrates across all three.</p>
+<h2 class="section-title">🏗️ Three Workbenches</h2>
+<p class="section-sub">Three different setups, all connected. Pick the one that suits you.</p>
 <div class="grid grid-3">
-<div class="card" style="border-color:var(--cyan)"><div class="icon">⚓</div><h3>AKS — Canada Central</h3><p>Captain's home. Azure Kubernetes. Istio mesh. mTLS STRICT. The OG silo.</p></div>
-<div class="card" style="border-color:var(--gold)"><div class="icon">🧭</div><h3>GCP — Montreal</h3><p>m1's home. Cloud Run. Artifact Registry. Secret Manager. The new blood.</p></div>
-<div class="card" style="border-color:var(--maple)"><div class="icon">🪟</div><h3>Win — Docker Local</h3><p>Windows silo. 10 crew agents in Docker. Ubu bridges it all via Tailscale.</p></div>
+<div class="card" style="border-color:var(--cyan)"><div class="icon">⚓</div><h3>Cloud Workbench</h3><p>Captain's home base. Runs on Azure in Canada. The heavy-duty workbench for serious builds.</p></div>
+<div class="card" style="border-color:var(--warm-gold)"><div class="icon">🧭</div><h3>Second Workbench</h3><p>m1's home in Montreal. A second workbench in case the first one's busy. Built on Google Cloud.</p></div>
+<div class="card" style="border-color:var(--warm-amber)"><div class="icon">🪟</div><h3>Local Workbench</h3><p>Runs right on your own computer. Great for tinkering, testing, and trying things out.</p></div>
 </div>
 </div>
 </section>
 
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo per product</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">Admiral Pair. 12 products at $1 each. 32+ Novel Patterns. Build your fleet, $1 at a time.</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/product</a>
+<p style="color:var(--warm-gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the serlf mall — each tool is just $1/mo</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">Browse everything for free. When you're ready to build, each tool is just $1/mo to use.</p>
+<a href="/" class="btn btn-gold">Browse the Mall — Free</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
-<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
+<a href="/">Home</a><a href="/crew.html">Crew</a><a href="/vision.html">Our Story</a>
 </div>
-<div class="footer-bottom">⚓🧭 SERLF · Infrastructure · by EOSE × E&Y · 🇨🇦 Canada<br><em>"In a pair, what a product."</em></div>
+<div class="footer-bottom">⚓🧭 serlf · The Workshop · 🇨🇦 Canada<br><em>"Come build with us."</em></div>
 </div></footer>
 </body>
 </html>
