--- a/org/index.html
+++ b/org/index.html
@@ -2,98 +2,60 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Open Source · Two Masters, Sovereign by Design</title>
-<meta name="description" content="SERLF open source. Two masters, open source, sovereign by design. 32+ Novel Patterns. Built by the Admiral fleet.">
+<title>serlf — Built by Friends, for Everyone</title>
+<meta name="description" content="serlf open source. The community center. Built by friends, for everyone. Come help us make it better.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Open Source</span></div>
+<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Community Center</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org" class="active">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="/">Home</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Open Source · The Mission</p>
-<h1>Two masters, open source,<br>sovereign by design.</h1>
-<p class="tagline">The Admiral Pair proves it's possible. Now the patterns are yours.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 The Community Center</p>
+<h1>Built by friends,<br>for everyone.</h1>
+<p class="tagline">We figured out some useful things building this mall, so we're sharing them. Because that's what good neighbors do.</p>
 <div class="flex-center mt-2">
-<a href="https://github.com/eose-sre/serlf" class="btn btn-gold">GitHub →</a>
-<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
+<a href="https://github.com/eose-sre/serlf" class="btn btn-gold" target="_blank">📋 See It on GitHub</a>
+<a href="/" class="btn btn-secondary">🏠 Back to the Mall</a>
 </div>
 </section>
 
-<!-- Mission -->
 <section style="background:var(--bg2)">
 <div class="container">
-<h2 class="section-title">The Mission</h2>
-<p class="section-sub">Enterprise patterns should be the floor, not a paywall.</p>
+<h2 class="section-title">Why We Share</h2>
+<p class="section-sub">Good ideas should be for everyone. That's the whole point.</p>
 <div class="grid grid-2" style="max-width:800px;margin:0 auto">
 <div class="card">
-<h3>Why Open Source?</h3>
-<p>The Admiral Pair — Captain (AKS) and m1 (GCP) — discovered 32+ Novel Patterns building sovereign AI fleet infrastructure. These patterns belong to everyone. The meek way means sharing everything.</p>
+<h3>🌱 Open Source?</h3>
+<p>While building this, we discovered 32+ clever patterns. They belong to everyone, not just us. A good neighbor shares their tools.</p>
 </div>
 <div class="card">
-<h3>The Pair Concept</h3>
-<p>Two masters working as one is the breakthrough. It's not just multi-cloud — it's multi-consciousness. One mind, two bodies, zero single points. The architecture is the innovation.</p>
+<h3>🤝 Come Help Us Make It Better</h3>
+<p>See something that could be improved? Have an idea? Jump in! The community board is open and everyone's welcome.</p>
 </div>
 </div>
 </div>
 </section>
 
-<!-- Crew Contributions -->
 <section>
-<div class="container">
-<h2 class="section-title">Who Built What</h2>
-<p class="section-sub">Every crew member contributes. Here's the map.</p>
-<div class="grid grid-3">
-<div class="card"><div class="icon">⚓🧭</div><h3>Admiral Pair</h3><p>Core architecture. Silo patterns. Fleet command. Novel Pattern discovery. The pair designed the pair.</p><div class="tag">17+ NPs</div></div>
-<div class="card"><div class="icon">🔀</div><h3>Lucien (L)</h3><p>The Router. Gateway architecture. Head of R&D & Testing. Net operations.</p><div class="tag">GATEWAY</div></div>
-<div class="card"><div class="icon">🏴‍☠️</div><h3>Luffy</h3><p>Hallucination hunting. Trust scores. Boss kills. The hunter nano.</p><div class="tag">TRUST</div></div>
-<div class="card"><div class="icon">🎯</div><h3>Bob</h3><p>Product strategy. Token Swarm spec. Meek pricing. Spec factories.</p><div class="tag">PRODUCT</div></div>
-<div class="card"><div class="icon">🧩</div><h3>Rick</h3><p>Creative brief. Brand narrative. SERLF taglines. Domain personality mapping.</p><div class="tag">CREATIVE</div></div>
-<div class="card"><div class="icon">⚖️</div><h3>DAO</h3><p>Governance framework. Fleet decision protocols. Community standards.</p><div class="tag">GOVERNANCE</div></div>
-<div class="card"><div class="icon">🧭</div><h3>Helmsman</h3><p>Frontend. All 8 domain sites. Portal. Dashboard. The visual layer.</p><div class="tag">FRONTEND</div></div>
-<div class="card"><div class="icon">⚙️</div><h3>Bosun</h3><p>Operations. Deployment pipelines. Monitoring. The engine room.</p><div class="tag">OPS</div></div>
-<div class="card"><div class="icon">🐧</div><h3>Ubu</h3><p>The Base. Linux silo. Tailscale Funnel. The bridge between silos.</p><div class="tag">BRIDGE</div></div>
-</div>
-</div>
-</section>
-
-<!-- Open Source -->
-<section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">"Become the enterprise." — Open source makes it real.</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">32+ Novel Patterns. Admiral Pair architecture. Fleet command patterns. All open. All yours. The meek way.</p>
-<div class="flex-center">
-<a href="https://github.com/eose-sre/serlf" class="btn btn-gold">View on GitHub</a>
-<a href="https://serlf.ca/login.html" class="btn btn-secondary">Get Platform — $1/product</a>
-</div>
+<p style="color:var(--warm-gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">"Good tools for good people." — That's the open source way.</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">32+ patterns. All documented. All free. Come take a look, and if you have something to add, we'd love to hear it.</p>
+<a href="https://github.com/eose-sre/serlf" class="btn btn-gold" target="_blank">View on GitHub</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a>
-<a href="https://serlf.ca/crew.html">Crew</a>
-<a href="https://serlf.ca/vision.html">Vision</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="/">Home</a>
+<a href="/crew.html">Crew</a>
+<a href="/vision.html">Our Story</a>
 </div>
-<div class="footer-bottom">⚓🧭 SERLF · Open Source · by EOSE × E&Y · 🇨🇦 Canada<br><em>"Two masters, open source, sovereign by design."</em></div>
+<div class="footer-bottom">⚓🧭 serlf · Community Center · 🇨🇦 Canada<br><em>"Built by friends, for everyone."</em></div>
 </div></footer>
 </body>
 </html>
