--- a/portal-v2.html
+++ b/portal-v2.html
@@ -174,7 +174,7 @@ tr:hover td{background:var(--bg3)}
 
 <div class="topbar">
   <div class="logo">⚓🧭 Admiral Pair <span>Hive Mind</span></div>
-  <span style="font-size:10px;color:var(--yellow);margin-right:12px">EOSE × E&Y</span>
+  <span style="font-size:10px;color:var(--yellow);margin-right:12px">SERLF</span>
   <div class="tabs" id="tabs">
     <button class="tab-btn active" data-tab="hive">🧠 Hive Mind</button>
     <button class="tab-btn" data-tab="router">🔀 Model Router</button>
@@ -197,7 +197,7 @@ tr:hover td{background:var(--bg3)}
 <!-- ═══════════════ TAB 1: HIVE MIND ═══════════════ -->
 <div class="tab-content active" id="tab-hive">
   <div class="section-header">
-    <div><h2>⚓🧭 Admiral Pair — Hive Mind</h2><div class="subtitle">Two masters (Captain + m1), one hive mind. The pair IS the product. Powered by EOSE × E&Y.</div></div>
+    <div><h2>⚓🧭 Admiral Pair — Hive Mind</h2><div class="subtitle">Two masters (Captain + m1), one hive mind. The pair IS the product. Powered by SERLF.</div></div>
     <div style="font-size:12px;color:var(--text3)">Last sync: 2s ago</div>
   </div>
 
@@ -366,7 +366,7 @@ tr:hover td{background:var(--bg3)}
       <div class="np-card" data-cat="infra"><div class="np-id">NP-L1-004</div><div class="np-name">Loop Detection</div><div class="np-meta"><span class="stars">⭐⭐⭐⭐</span><span>🔧 Infra</span><span>Captain</span></div></div>
       <div class="np-card" data-cat="infra"><div class="np-id">NP-L1-014</div><div class="np-name">Tool Not Shell Command</div><div class="np-meta"><span class="stars">⭐⭐⭐</span><span>🔧 Infra</span><span>Captain</span></div></div>
       <div class="np-card" data-cat="mesh"><div class="np-id">NP-L1-002</div><div class="np-name">Shape Discovery</div><div class="np-meta"><span class="stars">⭐⭐⭐⭐⭐</span><span>🕸️ Mesh</span><span>Captain</span></div></div>
-      <div class="np-card" data-cat="product"><div class="np-id">NP-L1-008</div><div class="np-name">Meek Hosting Matrix</div><div class="np-meta"><span class="stars">⭐⭐⭐⭐⭐</span><span>📦 Product</span><span>Captain</span></div></div>
+      <div class="np-card" data-cat="product"><div class="np-id">NP-L1-008</div><div class="np-name">Friendly Hosting Matrix</div><div class="np-meta"><span class="stars">⭐⭐⭐⭐⭐</span><span>📦 Product</span><span>Captain</span></div></div>
     </div>
     <div class="kanban-col">
       <h4>In Progress <span class="count">3</span></h4>
@@ -636,7 +636,7 @@ tr:hover td{background:var(--bg3)}
         <div style="border-bottom:1px solid var(--border);padding:4px 0"><span style="color:var(--text3)">Feb 15 20:00</span> — Device auth break-glass activated (justified: pairing bootstrap)</div>
         <div style="border-bottom:1px solid var(--border);padding:4px 0"><span style="color:var(--text3)">Feb 14 22:00</span> — Fleet repo push: spawn allowlist config</div>
         <div style="border-bottom:1px solid var(--border);padding:4px 0"><span style="color:var(--text3)">Feb 14 18:00</span> — Silo access audit: 6/6 passed (cross-ns denied)</div>
-        <div style="padding:4px 0"><span style="color:var(--text3)">Feb 14 12:00</span> — Admiral promotion authorized by Kay J</div>
+        <div style="padding:4px 0"><span style="color:var(--text3)">Feb 14 12:00</span> — Admiral promotion authorized by the founders</div>
       </div>
     </div>
   </div>
@@ -660,7 +660,7 @@ tr:hover td{background:var(--bg3)}
 <div class="tab-content" id="tab-products">
   <div class="section-header">
     <div><h2>Products & Domains</h2><div class="subtitle">12 products · 28 domains · $1/mo per product</div></div>
-    <div style="font-size:12px">Customer Zero: <strong style="color:var(--accent)">Kay J</strong> ⚓</div>
+    <div style="font-size:12px">Customer Zero: <strong style="color:var(--accent)">The Founders</strong> ⚓</div>
   </div>
 
   <div class="grid grid-4" style="margin-bottom:16px">
@@ -685,7 +685,7 @@ tr:hover td{background:var(--bg3)}
         <div>Price: <strong style="color:var(--green)">$1/mo per product</strong> (NP-L1-021)</div>
         <div>Payment Link: <a href="https://buy.stripe.com/fZufZbgo3cxr0Li9ZAgjC03" target="_blank">buy.stripe.com/...</a></div>
         <div>Billing Portal: <a href="https://billing.stripe.com/p/login/5kQ7v3c5L5pE5b2cMM" target="_blank">billing.stripe.com/...</a></div>
-        <div style="margin-top:8px">Customers: <strong>1</strong> (Kay J — Customer Zero)</div>
+        <div style="margin-top:8px">Customers: <strong>1</strong> (The Founders — Customer Zero)</div>
         <div>MRR: <strong style="color:var(--green)">$1.00</strong></div>
       </div>
     </div>
@@ -1011,7 +1011,7 @@ tr:hover td{background:var(--bg3)}
 
 <!-- ═══════════════ TAB 12: LEADERBOARD ═══════════════ -->
 <div class="tab-content" id="tab-leaderboard">
-  <div class="section-title">🏆 The Meek Leaderboard</div>
+  <div class="section-title">🏆 The Explorer Leaderboard</div>
   
   <div style="display:grid;grid-template-columns:repeat(4,1fr);gap:8px;margin-bottom:16px">
     <div class="metric-card"><div class="metric-value" style="color:var(--accent)">247</div><div class="metric-label">Total Learners</div></div>
@@ -1020,13 +1020,13 @@ tr:hover td{background:var(--bg3)}
     <div class="metric-card"><div class="metric-value" style="color:#a855f7">38</div><div class="metric-label">Admirals 💎</div></div>
   </div>
 
-  <div class="section-title" style="font-size:12px;margin-top:12px">🏆 Top Meekest — All Time</div>
+  <div class="section-title" style="font-size:12px;margin-top:12px">🏆 Top Explorers — All Time</div>
   <table>
     <thead><tr><th>#</th><th>Sailor</th><th>Score</th><th>Badge</th></tr></thead>
     <tbody>
       <tr><td>🥇</td><td><strong>SovereignSailor</strong></td><td style="color:var(--accent)">1,355</td><td>💎 Admiral</td></tr>
-      <tr><td>🥈</td><td><strong>MeekMaster99</strong></td><td style="color:var(--accent)">1,310</td><td>💎 Admiral</td></tr>
-      <tr style="background:rgba(6,182,212,.1)"><td>🥉</td><td><strong>Kay J</strong> ← you</td><td style="color:var(--accent)">1,280</td><td>🧅 The Meek</td></tr>
+      <tr><td>🥈</td><td><strong>CuriousCat99</strong></td><td style="color:var(--accent)">1,310</td><td>💎 Admiral</td></tr>
+      <tr style="background:rgba(6,182,212,.1)"><td>🥉</td><td><strong>MallBuilder</strong> ← you</td><td style="color:var(--accent)">1,280</td><td>⭐ The Explorer</td></tr>
       <tr><td>4</td><td>AgentSmith_0x</td><td>1,140</td><td>💎 Admiral</td></tr>
       <tr><td>5</td><td>FleetCaptainZero</td><td>1,095</td><td>💎 Admiral</td></tr>
       <tr><td>6</td><td>SiloSensei</td><td>1,010</td><td>🥇 Fleet Captain</td></tr>
@@ -1041,7 +1041,7 @@ tr:hover td{background:var(--bg3)}
   <div style="font-size:12px;color:var(--text2)">
     <div style="padding:4px 0;border-bottom:1px solid var(--border)">🌀 <strong>AgentSmith_0x</strong> discovered NP-L1-033: Token Rebalance — <span style="color:var(--text3)">2m ago</span></div>
     <div style="padding:4px 0;border-bottom:1px solid var(--border)">📦 <strong>NanoNinja</strong> collected Token Swarm — <span style="color:var(--text3)">8m ago</span></div>
-    <div style="padding:4px 0;border-bottom:1px solid var(--border)">📚 <strong>MeekMaster99</strong> completed Cloud Control Plane course — <span style="color:var(--text3)">15m ago</span></div>
+    <div style="padding:4px 0;border-bottom:1px solid var(--border)">📚 <strong>CuriousCat99</strong> completed Cloud Control Plane course — <span style="color:var(--text3)">15m ago</span></div>
     <div style="padding:4px 0;border-bottom:1px solid var(--border)">🔥 <strong>TheQuietOne</strong> hit 90-day streak! — <span style="color:var(--text3)">22m ago</span></div>
     <div style="padding:4px 0;border-bottom:1px solid var(--border)">🤝 <strong>SovereignSailor</strong> mentored 3 new sailors — <span style="color:var(--text3)">35m ago</span></div>
     <div style="padding:4px 0">💎 <strong>FleetCaptainZero</strong> earned Admiral badge! — <span style="color:var(--text3)">1h ago</span></div>
@@ -1053,7 +1053,7 @@ tr:hover td{background:var(--bg3)}
     <div style="background:var(--bg3);padding:8px;border-radius:6px"><div style="font-size:16px">🥈</div><div style="color:var(--text2)">Builder</div><div><strong>64</strong></div></div>
     <div style="background:var(--bg3);padding:8px;border-radius:6px"><div style="font-size:16px">🥇</div><div style="color:var(--text2)">Fleet Cpt</div><div><strong>42</strong></div></div>
     <div style="background:var(--bg3);padding:8px;border-radius:6px"><div style="font-size:16px">💎</div><div style="color:var(--text2)">Admiral</div><div><strong>38</strong></div></div>
-    <div style="background:var(--bg3);padding:8px;border-radius:6px"><div style="font-size:16px">🧅</div><div style="color:var(--text2)">The Meek</div><div><strong>14</strong></div></div>
+    <div style="background:var(--bg3);padding:8px;border-radius:6px"><div style="font-size:16px">🧅</div><div style="color:var(--text2)">The Explorer</div><div><strong>14</strong></div></div>
   </div>
 
   <div style="text-align:center;margin-top:12px">
