--- a/shop/index.html
+++ b/shop/index.html
@@ -2,54 +2,50 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Merch &amp; Tools · Admiral Fleet Control</title>
-<meta name="description" content="SERLF merch. Admiral Pair gear, fleet hoodies, sovereign stickers.">
+<title>serlf — The Gift Shop · Take Something Home</title>
+<meta name="description" content="serlf merch and gear. Hoodies, stickers, and fun stuff. Take something home from the mall.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Merch</span></div>
+<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Gift Shop</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a><a href="https://serlf.club">.club</a><a href="https://serlf.shop" class="active">.shop</a><a href="https://serlf.store">.store</a>
+<a href="/">Home</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Merch &amp; Tools</p>
-<h1>Wear the fleet.<br>⚓🧭 Admiral Pair gear.</h1>
-<p class="tagline">Hoodies, stickers, hardware kits. Rep the sovereign fleet. Canadian-made.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🎁 The Gift Shop</p>
+<h1>Take something home.</h1>
+<p class="tagline">Hoodies, stickers, and fun gear. Like the souvenir shop at the end of the mall — but cooler. 😎</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Start Building — $1/product</a>
-<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
+<a href="/" class="btn btn-gold">🏠 Back to the Mall</a>
 </div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">Coming Soon</h2>
+<h2 class="section-title">Coming Soon 🎉</h2>
 <div class="grid grid-3">
-<div class="card" style="text-align:center"><div style="font-size:3rem">👕</div><h3>"SELF + RL = SERLF" Hoodie</h3><p>Navy dark. Maple leaf. The formula on the back.</p><div class="tag">COMING SOON</div></div>
-<div class="card" style="text-align:center"><div style="font-size:3rem">⚓🧭</div><h3>Admiral Pair Sticker Pack</h3><p>Captain + m1. Dual icons. Laptop-ready.</p><div class="tag">COMING SOON</div></div>
-<div class="card" style="text-align:center"><div style="font-size:3rem">🍁</div><h3>"In a pair, what a product" Tee</h3><p>The tagline that started it all.</p><div class="tag">COMING SOON</div></div>
+<div class="card" style="text-align:center"><div style="font-size:3rem">👕</div><h3>"serlf" Hoodie</h3><p>Navy dark. Comfy. The kind of hoodie you'd live in. Canadian-made quality.</p><div class="tag">COMING SOON</div></div>
+<div class="card" style="text-align:center"><div style="font-size:3rem">⚓🧭</div><h3>Sticker Pack</h3><p>Captain + m1 stickers. Perfect for laptops, water bottles, and notebook covers.</p><div class="tag">COMING SOON</div></div>
+<div class="card" style="text-align:center"><div style="font-size:3rem">🍁</div><h3>"Friendly Mall" Tee</h3><p>Soft cotton. Warm vibes. Wear the feeling.</p><div class="tag">COMING SOON</div></div>
 </div>
 </div>
 </section>
 
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo per product</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/product</a>
+<p style="color:var(--warm-gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the serlf mall — browse everything for free</p>
+<a href="/" class="btn btn-gold">Back to the Mall</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
-<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
+<a href="/">Home</a><a href="/crew.html">Crew</a><a href="/vision.html">Our Story</a>
 </div>
-<div class="footer-bottom">⚓🧭 SERLF · Merch · by EOSE × E&Y · 🇨🇦 Canada<br><em>"In a pair, what a product."</em></div>
+<div class="footer-bottom">⚓🧭 serlf · Gift Shop · 🇨🇦 Canada<br><em>"Take something home."</em></div>
 </div></footer>
 </body>
 </html>
