--- a/store/index.html
+++ b/store/index.html
@@ -2,54 +2,50 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Digital Marketplace · Admiral Fleet Control</title>
-<meta name="description" content="SERLF digital marketplace. Agent blueprints, sandbox environments, premium patterns. Built by the Admiral fleet.">
+<title>serlf — The Marketplace · Made by Our Community</title>
+<meta name="description" content="serlf digital marketplace. Templates, tools, and creations made by our community. For our community.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Marketplace</span></div>
+<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Marketplace</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a><a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store" class="active">.store</a>
+<a href="/">Home</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Digital Marketplace</p>
-<h1>The economy.<br>Built by the fleet, for the fleet.</h1>
-<p class="tagline">Agent blueprints, sandbox environments, premium challenge packs. Graduates sell back to the ecosystem.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🏪 The Marketplace</p>
+<h1>Made by our community,<br>for our community.</h1>
+<p class="tagline">Like the little pop-up shops at the mall — people making cool stuff and sharing it with everyone else.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Start Building — $1/product</a>
-<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
+<a href="/" class="btn btn-gold">🏠 Back to the Mall</a>
 </div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">Digital Goods</h2>
+<h2 class="section-title">What's Coming</h2>
 <div class="grid grid-3">
-<div class="card"><div class="icon">🤖</div><h3>Agent Blueprints</h3><p>Pre-built agent templates. Fleet-tested. Sovereign by design. Deploy in minutes.</p><div class="tag">COMING SOON</div></div>
-<div class="card"><div class="icon">🏗️</div><h3>Sandbox Environments</h3><p>Pre-configured learning environments. SERLF Academy compatible.</p><div class="tag">COMING SOON</div></div>
-<div class="card"><div class="icon">🌀</div><h3>Premium Pattern Packs</h3><p>Deep-dive Novel Pattern implementations with full source and docs.</p><div class="tag">COMING SOON</div></div>
+<div class="card"><div class="icon">🤖</div><h3>Ready-Made Templates</h3><p>Pre-built AI helper templates. Tested and ready to go. Like buying a model kit instead of starting from scratch.</p><div class="tag">COMING SOON</div></div>
+<div class="card"><div class="icon">🏗️</div><h3>Practice Spaces</h3><p>Pre-configured learning environments. Safe spaces to try things out without breaking anything.</p><div class="tag">COMING SOON</div></div>
+<div class="card"><div class="icon">🌀</div><h3>Pattern Collections</h3><p>Deep-dive guides on our cleverest solutions. With full examples and step-by-step instructions.</p><div class="tag">COMING SOON</div></div>
 </div>
 </div>
 </section>
 
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo per product</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/product</a>
+<p style="color:var(--warm-gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the serlf mall — browse everything for free</p>
+<a href="/" class="btn btn-gold">Back to the Mall</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
-<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
+<a href="/">Home</a><a href="/crew.html">Crew</a><a href="/vision.html">Our Story</a>
 </div>
-<div class="footer-bottom">⚓🧭 SERLF · Marketplace · by EOSE × E&Y · 🇨🇦 Canada<br><em>"Become the enterprise."</em></div>
+<div class="footer-bottom">⚓🧭 serlf · Marketplace · 🇨🇦 Canada<br><em>"Made by our community, for our community."</em></div>
 </div></footer>
 </body>
 </html>
