--- a/app.html
+++ b/app.html
@@ -2,25 +2,18 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Admiral Pair Dashboard</title>
-<meta name="description" content="Your SERLF dashboard. Admiral Pair + 13 products, 32+ Novel Patterns, $1/mo per product. EOSE × E&Y.">
+<title>Your Stuff | serlf</title>
+<meta name="description" content="Your serlf dashboard. Manage your collection of stores.">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo"><a href="#/" style="color:#fff;text-decoration:none">⚓🧭 SERLF<span class="maple">🍁</span></a></div>
+<div class="logo"><a href="/" style="text-decoration:none; color:inherit;">⚓🧭 serlf<span class="maple">🍁</span></a></div>
 <nav>
-<a href="#/" class="nav-link" data-page="home">Home</a>
-<a href="#/products" class="nav-link" data-page="products">Products</a>
-<a href="#/patterns" class="nav-link" data-page="patterns">Patterns</a>
-<a href="#/crew" class="nav-link" data-page="crew">Crew</a>
-<a href="#/academy" class="nav-link" data-page="academy">Academy</a>
-<a href="#/status" class="nav-link" data-page="status">Status</a>
-<a href="#/leaderboard" class="nav-link" data-page="leaderboard">🏆 Leaderboard</a>
-<a href="#/collection" class="nav-link" data-page="collection">📦 Collection</a>
-<a href="#/profile" class="nav-link" data-page="profile">👤 Profile</a>
-<a href="/dashboard.html" class="nav-link">Fleet Control</a>
-<a href="#/account" class="nav-link" data-page="account" id="nav-account">Account</a>
+<a href="/">Mall Directory</a>
+<a href="/crew.html">Crew</a>
+<a href="/vision.html">Our Story</a>
+<a href="#" id="nav-account">Your Account</a>
 </nav>
 </div></header>
 
@@ -29,21 +22,15 @@
 <footer class="site-footer">
 <div class="footer-inner">
 <div class="footer-links">
-<a href="/">serlf.ca</a>
-<a href="/crew.html">Crew</a>
-<a href="/vision.html">Vision</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="/dashboard.html">Fleet Control</a>
-<a href="mailto:kewinjoffe@gmail.com">Contact</a>
+<a href="/">Home</a>
+<a href="/safety.html">Safety</a>
+<a href="mailto:kay@serlf.com">Say Hi</a>
 </div>
-<div class="footer-bottom">⚓🧭 SERLF · Admiral Fleet Control · EOSE × E&Y · 🇨🇦 · $1/mo per product</div>
+<div class="footer-bottom">⚓🧭 serlf · Your Friendly AI Mall · 🇨🇦 Canada</div>
 </div>
 </footer>
 
 <script src="auth.js"></script>
-<script src="serlf-api.js"></script>
 <script src="stripe-checkout.js"></script>
 <script src="app.js"></script>
 <script>
@@ -54,7 +41,11 @@ if (!SERLF_AUTH.isAuthenticated()) {
 // Update account nav
 const user = SERLF_AUTH.getUser();
 if (user) {
-  document.getElementById('nav-account').textContent = user.given_name || user.name.split(' ')[0];
+  const el = document.getElementById('nav-account');
+  el.textContent = 'Hi, ' + (user.given_name || user.name.split(' ')[0]) + '!';
+  el.onclick = () => SERLF_AUTH.logout();
+  el.style.cursor = 'pointer';
+  el.title = 'Sign Out';
 }
 </script>
 </body>
