--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🏆 The Meek Leaderboard — SERLF</title>
+<title>🏆 The Explorer Leaderboard — SERLF</title>
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 :root{--bg:#0a0e1a;--bg2:#111827;--bg3:#1a2235;--surface:#1e293b;--border:#2d3a4f;--fg:#e2e8f0;--fg2:#94a3b8;--gold:#f59e0b;--cyan:#06b6d4;--green:#10b981;--red:#ef4444;--purple:#a855f7;--pink:#ec4899;--blue:#3b82f6;--radius:12px;--glow:0 0 20px rgba(6,182,212,.15)}
@@ -71,10 +71,10 @@ a{color:var(--cyan);text-decoration:none}
   <a href="index.html" class="nav-back">⚓ Back to SERLF</a>
   
   <div class="hero">
-    <h1>🏆 The Meek Leaderboard</h1>
-    <p>The meekest shall inherit the leaderboard. 🧅⚓</p>
+    <h1>🏆 The Explorer Leaderboard</h1>
+    <p>The friendliest explorers rise to the top. ⚓🧭</p>
     <div class="formula-box">
-      Meek Score = (Products × 10) + (NPs × 25) + (Courses × 15) + (Helps × 20) + (Streak × 5)
+      Explorer Score = (Products × 10) + (NPs × 25) + (Courses × 15) + (Helps × 20) + (Streak × 5)
     </div>
   </div>
 
@@ -85,7 +85,7 @@ a{color:var(--cyan);text-decoration:none}
   </div>
 
   <div class="cat-tabs" id="catTabs">
-    <div class="cat-tab active" data-cat="overall">🏆 Meekest Overall</div>
+    <div class="cat-tab active" data-cat="overall">🏆 Friendliest Overall</div>
     <div class="cat-tab" data-cat="collector">📦 Product Collector</div>
     <div class="cat-tab" data-cat="learner">📚 Top Learner</div>
     <div class="cat-tab" data-cat="hunter">🌀 NP Hunter</div>
@@ -104,12 +104,12 @@ const AVATAR_COLORS = ['#ef4444','#f59e0b','#10b981','#3b82f6','#8b5cf6','#ec489
 
 const USERS = [
   {name:'SovereignSailor',title:'Fleet Admiral',products:12,nps:8,courses:14,helps:22,streak:45},
-  {name:'MeekMaster99',title:'The Meekest',products:12,nps:6,courses:12,helps:18,streak:60},
+  {name:'CuriousCat99',title:'The Friendliest',products:12,nps:6,courses:12,helps:18,streak:60},
   {name:'AgentSmith_0x',title:'NP Hunter',products:10,nps:11,courses:10,helps:12,streak:30},
   {name:'FleetCaptainZero',title:'Admiral',products:11,nps:5,courses:11,helps:20,streak:38},
   {name:'SiloSensei',title:'Security Guru',products:9,nps:7,courses:13,helps:15,streak:25},
   {name:'TheQuietOne',title:'Streak Legend',products:8,nps:4,courses:9,helps:10,streak:90},
-  {name:'Kay J',title:'Founder · EOSE',products:12,nps:32,courses:6,helps:30,streak:14,isYou:true},
+  {name:'MallBuilder',title:'Founder',products:12,nps:32,courses:6,helps:30,streak:14,isYou:true},
   {name:'NanoNinja',title:'Speed Demon',products:7,nps:3,courses:16,helps:8,streak:20},
   {name:'PatternPirate',title:'NP Collector',products:6,nps:9,courses:7,helps:14,streak:22},
   {name:'LoopLord',title:'Monitor Maven',products:8,nps:5,courses:11,helps:11,streak:35},
@@ -121,14 +121,14 @@ const USERS = [
   {name:'RouteRanger',title:'Pathfinder',products:5,nps:1,courses:9,helps:5,streak:33},
   {name:'BosunBot',title:'Ops Wizard',products:8,nps:3,courses:6,helps:19,streak:12},
   {name:'DeployDragon',title:'Ship It',products:3,nps:1,courses:4,helps:3,streak:7},
-  {name:'MeekIntern',title:'Just Started',products:1,nps:0,courses:1,helps:1,streak:3},
+  {name:'NewExplorer',title:'Just Started',products:1,nps:0,courses:1,helps:1,streak:3},
   {name:'GatewayGhost',title:'9 Providers',products:10,nps:4,courses:8,helps:10,streak:27},
 ];
 
-function meekScore(u){return u.products*10+u.nps*25+u.courses*15+u.helps*20+u.streak*5}
+function explorerScore(u){return u.products*10+u.nps*25+u.courses*15+u.helps*20+u.streak*5}
 
 const CATEGORIES = {
-  overall: u => meekScore(u),
+  overall: u => explorerScore(u),
   collector: u => u.products,
   learner: u => u.courses,
   hunter: u => u.nps,
