--- a/welcome.html
+++ b/welcome.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Welcome to the Fleet | SERLF</title>
+<title>Welcome! | serlf</title>
 <link rel="stylesheet" href="styles.css">
 <style>
 body{display:flex;align-items:center;justify-content:center;min-height:100vh;background:linear-gradient(135deg,#0a1628 0%,#1e3a5f 100%)}
@@ -10,55 +10,35 @@ body{display:flex;align-items:center;justify-content:center;min-height:100vh;bac
 .success-icon{width:80px;height:80px;background:linear-gradient(135deg,#10b981,#059669);border-radius:50%;margin:0 auto 2rem;display:flex;align-items:center;justify-content:center;font-size:2rem;box-shadow:0 8px 25px rgba(16,185,129,.4)}
 .welcome-title{font-size:2rem;font-weight:200;letter-spacing:.05em;margin-bottom:.5rem}
 .payment-ok{background:rgba(16,185,129,.1);border:1px solid rgba(16,185,129,.2);border-radius:12px;padding:1rem;margin:1.5rem 0;color:#6ee7b7;font-weight:500}
-.what-you-got{display:grid;grid-template-columns:1fr 1fr;gap:.75rem;margin:2rem 0;text-align:left}
-.what-you-got .item{background:rgba(255,255,255,.03);border-radius:8px;padding:.75rem;font-size:.85rem;color:var(--fg2)}
-.what-you-got .item strong{color:var(--fg);display:block;margin-bottom:.25rem}
 </style>
 </head>
 <body>
 <div class="welcome-box">
-<div class="success-icon">✓</div>
-<div class="logo" style="font-size:2rem;font-weight:700;color:var(--cyan)">SERLF<span style="color:var(--maple)">🍁</span></div>
-<h1 class="welcome-title">Welcome to the fleet.</h1>
-<p style="color:var(--fg2)">You're in. Build your fleet, $1 at a time.</p>
+<div class="success-icon">🎉</div>
+<div class="logo" style="font-size:2rem;font-weight:700;color:var(--cyan)">serlf<span style="color:var(--maple)">🍁</span></div>
+<h1 class="welcome-title">Welcome in!</h1>
+<p style="color:var(--fg2)">You're part of the family now. Make yourself at home.</p>
 
-<div class="payment-ok">🎉 Payment successful! Your subscription is active. $1/mo per product.</div>
+<div class="payment-ok">You're all set! Your store access is active.</div>
 
-<div class="what-you-got">
-<div class="item"><strong>🔐 Silo-as-a-Service</strong>Day 0 security, 6/6 score</div>
-<div class="item"><strong>🎖️ Fleet Command</strong>Multi-agent orchestration</div>
-<div class="item"><strong>🕸️ The Net</strong>Zero blast radius mesh</div>
-<div class="item"><strong>🌀 Novel Patterns</strong>30+ production patterns</div>
-<div class="item"><strong>⚡ The Router</strong>Intent-based routing</div>
-<div class="item"><strong>🪪 Identity Fabric</strong>Zero-trust AI identity</div>
-<div class="item"><strong>🐝 Token Swarm</strong>87% cost savings</div>
-<div class="item"><strong>🚀 Model Gateway</strong>9 providers, 1 endpoint</div>
-<div class="item"><strong>🚀 Captain Incubator</strong>Sovereign AI instances</div>
-<div class="item"><strong>🎓 SERLF Academy</strong>Self-evolving curriculum</div>
-<div class="item"><strong>🔄 Loop Monitor</strong>Shape detection + alerts</div>
-<div class="item"><strong>🏗️ DT Consulting</strong>15+ years enterprise</div>
-</div>
-
-<a href="/app.html" class="btn btn-gold" style="width:100%;margin-top:1rem">Enter Your Dashboard →</a>
+<a href="/app.html" class="btn btn-gold" style="width:100%;margin-top:1.5rem">Go to Your Dashboard →</a>
 
 <p style="color:var(--fg2);font-size:.8rem;margin-top:1.5rem">
-<em>"Time is forever. This is our infinity."</em><br>
-SERLF · by EOSE · 🇨🇦 Toronto
+<em>"Come in, look around, stay as long as you like."</em>
 </p>
 </div>
 
 <script src="auth.js"></script>
 <script src="stripe-checkout.js"></script>
 <script>
-// Handle Stripe success redirect
+// Handle Stripe success redirect and set subscription status
 SERLF_STRIPE.checkSuccess();
 
-// If not authed, send to login
+// If not authenticated, send to login, but keep the success flag
 if (!SERLF_AUTH.isAuthenticated()) {
-  // Store that payment succeeded so we can activate after login
   const params = new URLSearchParams(window.location.search);
   if (params.get('session_id')) {
-    localStorage.setItem('serlf_pending_session', params.get('session_id'));
+    localStorage.setItem('serlf_pending_subscription', params.get('session_id'));
   }
 }
 </script>
