--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 <div class="card"><div class="icon">🍕</div><h3><a href="/club/">The Food Court</a></h3><p>Where everyone hangs out. Pull up a chair, ask questions, and meet new people.</p></div>
 <div class="card"><div class="icon">🎁</div><h3><a href="/shop/">The Gift Shop</a></h3><p>Fun merch and cool stuff. Take a little something home with you.</p></div>
 <div class="card"><div class="icon">🏪</div><h3><a href="/store/">The Marketplace</a></h3><p>Made by our community, for our community. Cool digital tools and templates.</p></div>
-<div class="card"><div class="icon">💡</div><h3>The Idea Shop</h3><p>32+ clever solutions we discovered. Come learn something new!</p></div>
-<div class="card"><div class="icon">🐝</div><h3>The Savings Counter</h3><p>We figured out how to make AI 87% cheaper. We'll show you how.</p></div>
-<div class="card"><div class="icon">🛡️</div><h3>The Security Desk</h3><p>Your stuff stays safe here. Like a really good mall security team that respects your privacy.</p></div>
-<div class="card"><div class="icon">🚀</div><h3>The Launchpad</h3><p>Ready to build your own thing? Start here. We give you everything you need on day one.</p></div>
-<div class="card"><div class="icon">🎓</div><h3>The Classroom</h3><p>Friendly lessons on how all this works. No jargon allowed.</p></div>
+<div class="card"><div class="icon">💡</div><h3><a href="/idea/">The Idea Shop</a></h3><p>32+ clever solutions we discovered. Come learn something new!</p></div>
+<div class="card"><div class="icon">🐝</div><h3><a href="/savings/">The Savings Counter</a></h3><p>We figured out how to make AI 87% cheaper. We'll show you how.</p></div>
+<div class="card"><div class="icon">🛡️</div><h3><a href="/security/">The Security Desk</a></h3><p>Your stuff stays safe here. Like a really good mall security team that respects your privacy.</p></div>
+<div class="card"><div class="icon">🚀</div><h3><a href="/launchpad/">The Launchpad</a></h3><p>Ready to build your own thing? Start here. We give you everything you need on day one.</p></div>
+<div class="card"><div class="icon">🎓</div><h3><a href="/classroom/">The Classroom</a></h3><p>Friendly lessons on how all this works. No jargon allowed.</p></div>
 
 </div>
 </div>
